Add Lorem ipsum to check mobile formatting

--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -47,7 +47,13 @@ body {font-size:16px;}
     <h1 class="w3-jumbo"><b>Simple Order</b></h1>
     <h1 class="w3-xxxlarge w3-text-green"><b>Allgemeine Geschäftsbedingungen</b></h1>
     <hr style="width:50px;border:5px solid rgb(0, 255, 0)" class="w3-round">
-    <p> Geschäftsbedingungen hier </p>
+    <p> Geschäftsbedingungen hier 
+        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut 
+        labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores 
+        et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem 
+        ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et 
+        dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. 
+        Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
   </div>
   
 <!-- End page content -->
