--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ body {font-size:16px;}
   <br>
   <div class="w3-bar-block">
     <a href="index.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Home</a> 
-    <a href="terms-and-conditions.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Geschäftsbedingungen</a> 
+    <a href="terms-and-conditions.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">AGB</a> 
     <a href="impressum.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Impressum</a> 
     <a href="privacy.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Datenschutzerklärung</a> 
   </div>
