--- a/privacy.html
+++ b/privacy.html
@@ -24,7 +24,7 @@ body {font-size:16px;}
   <br>
   <div class="w3-bar-block">
     <a href="index.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Home</a> 
-    <a href="terms-and-conditions.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Geschäftsbedingungen</a> 
+    <a href="terms-and-conditions.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">AGB</a> 
     <a href="impressum.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Impressum</a> 
     <a href="privacy.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Datenschutzerklärung</a> 
   </div>
@@ -47,7 +47,13 @@ body {font-size:16px;}
     <h1 class="w3-jumbo"><b>Simple Order</b></h1>
     <h1 class="w3-xxxlarge w3-text-green"><b>Datenschutzerklärung</b></h1>
     <hr style="width:50px;border:5px solid rgb(0, 255, 0)" class="w3-round">
-    <p> Datenschutzerklärung hier </p>
+    <p> Datenschutzerklärung hier
+        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut 
+        labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores 
+        et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem 
+        ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et 
+        dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. 
+        Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
   </div>
 
 <!-- End page content -->
