Adjust style to dark mode

--- a/impressum.html
+++ b/impressum.html
@@ -9,6 +9,7 @@
 <style>
 body,h1,h2,h3,h4,h5 {font-family: "Poppins", sans-serif}
 body {font-size:16px;}
+body {background-color: rgb(18, 18, 18);}
 .w3-half img{margin-bottom:-6px;margin-top:16px;opacity:0.8;cursor:pointer}
 .w3-half img:hover{opacity:1}
 </style>
@@ -44,7 +45,7 @@ body {font-size:16px;}
 
   <!-- Header -->
   <div class="w3-container" style="margin-top:80px" id="contact">
-    <h1 class="w3-jumbo"><b>Simple Order</b></h1>
+    <h1 class="w3-jumbo"><b style="color:white;">Simple Order</b></h1>
     <h1 class="w3-xxxlarge w3-text-green"><b>Impressum</b></h1>
     <hr style="width:50px;border:5px solid rgb(0, 255, 0)" class="w3-round">
   </div>
@@ -52,21 +53,21 @@ body {font-size:16px;}
   <!-- Photo grid (modal) -->
   <div class="w3-row-padding">
     <div class="w3-half">
-      <h1>Angaben gemäß § 5 TMG</h1>
-      <p>Simple Order</p>
-      <p>Sanderring 2</p>
-      <p>97070 Würzburg</p>
+      <h1 style="color:white;">Angaben gemäß § 5 TMG</h1>
+      <p style="color:white;">Simple Order</p>
+      <p style="color:white;">Sanderring 2</p>
+      <p style="color:white;">97070 Würzburg</p>
       <br>
-      <b>Vertreten durch:</b>
-      <p>Cem Özdemir</p>
-      <p>Martin Klüpfel</p>
-      <p>Elmar Schult</p>
-      <p>Maurice Friederici</p>
-      <p>Lenny Siol</p>
-      <p>Paul Birner</p>
-      <h1>Kontakt</h1>
-      <p>Telefon: </p>
-      <p>Email: </p>
+      <b style="color:white;">Vertreten durch:</b>
+      <p style="color:white;">Cem Özdemir</p>
+      <p style="color:white;">Martin Klüpfel</p>
+      <p style="color:white;">Elmar Schult</p>
+      <p style="color:white;">Maurice Friederici</p>
+      <p style="color:white;">Lenny Siol</p>
+      <p style="color:white;">Paul Birner</p>
+      <h1 style="color:white;">Kontakt</h1>
+      <p style="color:white;">Telefon: </p>
+      <p style="color:white;">Email: </p>
     </div>
   </div>
 
@@ -74,7 +75,7 @@ body {font-size:16px;}
 </div>
 
 <!-- W3.CSS Container -->
-<div class="w3-light-grey w3-container w3-padding-32" style="margin-top:75px;padding-right:58px"><p class="w3-right">Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-opacity">w3.css</a></p></div>
+<div class="w3-black w3-container w3-padding-32" style="margin-top:75px;padding-right:58px"><p class="w3-right">Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-opacity">w3.css</a></p></div>
 
 <script>
 // Script to open and close sidebar
