--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -9,6 +9,7 @@
 <style>
 body,h1,h2,h3,h4,h5 {font-family: "Poppins", sans-serif}
 body {font-size:16px;}
+body {background-color: rgb(18, 18, 18);}
 .w3-half img{margin-bottom:-6px;margin-top:16px;opacity:0.8;cursor:pointer}
 .w3-half img:hover{opacity:1}
 </style>
@@ -44,10 +45,10 @@ body {font-size:16px;}
 
   <!-- Header -->
   <div class="w3-container" style="margin-top:80px" id="contact">
-    <h1 class="w3-jumbo"><b>Simple Order</b></h1>
+    <h1 class="w3-jumbo"><b style="color:white;">Simple Order</b></h1>
     <h1 class="w3-xxxlarge w3-text-green"><b>Allgemeine Geschäftsbedingungen</b></h1>
     <hr style="width:50px;border:5px solid rgb(0, 255, 0)" class="w3-round">
-    <p> Geschäftsbedingungen hier 
+    <p style="color:white;"> Geschäftsbedingungen hier 
         Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut 
         labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores 
         et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem 
@@ -60,7 +61,7 @@ body {font-size:16px;}
 </div>
 
 <!-- W3.CSS Container -->
-<div class="w3-light-grey w3-container w3-padding-32" style="margin-top:75px;padding-right:58px"><p class="w3-right">Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-opacity">w3.css</a></p></div>
+<div class="w3-black w3-container w3-padding-32" style="margin-top:75px;padding-right:58px"><p class="w3-right">Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-opacity">w3.css</a></p></div>
 
 <script>
 // Script to open and close sidebar
