--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <style>
 body,h1,h2,h3,h4,h5 {font-family: "Poppins", sans-serif}
 body {font-size:16px;}
+body {background-color: rgb(18, 18, 18);}
 .w3-half img{margin-bottom:-6px;margin-top:16px;opacity:0.8;cursor:pointer}
 .w3-half img:hover{opacity:1}
 </style>
@@ -44,7 +45,7 @@ body {font-size:16px;}
 
   <!-- Header -->
   <div class="w3-container" style="margin-top:80px" id="contact">
-    <h1 class="w3-jumbo"><b>Simple Order</b></h1>
+    <h1 class="w3-jumbo" style="color:white;"><b>Simple Order</b></h1>
     <h1 class="w3-xxxlarge w3-text-green"><b>Home</b></h1>
     <hr style="width:50px;border:5px solid rgb(0, 255, 0)" class="w3-round">
   </div>
@@ -52,12 +53,12 @@ body {font-size:16px;}
   <!-- Photo grid (modal) -->
   <div class="w3-row-padding">
     <div class="w3-half">
-      <h1>Wilkommen bei Simple Order</h1>
-      <p>Die App Simple Order bietet eine neue Art den Bestellprozess 
+      <h1 style="color:white;">Wilkommen bei Simple Order</h1>
+      <p style="color:white;">Die App Simple Order bietet eine neue Art den Bestellprozess 
         eines Restaurants digital zu erleben. Bestellungen der Kund*innen 
         können einfach und schnell über die App aufgegeben und vom Restaurant verarbeitet werden.</p>
-      <p>Auch Vorbestellungen sind ohne Probleme möglich, welche das entsprechende Restaurant dann beim Besuch ausführt.</p>
-      <p>Die App trägt somit zur Entlastung des Personals und zu einer entspannteren Atmosphäre für die
+      <p style="color:white;">Auch Vorbestellungen sind ohne Probleme möglich, welche das entsprechende Restaurant dann beim Besuch ausführt.</p>
+      <p style="color:white;">Die App trägt somit zur Entlastung des Personals und zu einer entspannteren Atmosphäre für die
         Besucher*innen bei.</p>
     </div>
   </div>
@@ -66,7 +67,7 @@ body {font-size:16px;}
 </div>
 
 <!-- W3.CSS Container -->
-<div class="w3-light-grey w3-container w3-padding-32" style="margin-top:75px;padding-right:58px"><p class="w3-right">Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-opacity">w3.css</a></p></div>
+<div class="w3-black w3-container w3-padding-32" style="margin-top:75px;padding-right:58px;"><p class="w3-right">Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-opacity">w3.css</a></p></div>
 
 <script>
 // Script to open and close sidebar
