--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -46,7 +46,7 @@ body {background-color: rgb(18, 18, 18);}
   <!-- Header -->
   <div class="w3-container" style="margin-top:80px" id="contact">
     <h1 class="w3-jumbo"><b style="color:white;">Simple Order</b></h1>
-    <h1 class="w3-xxxlarge w3-text-green"><b>Allgemeine Geschäftsbedingungen</b></h1>
+    <h1 class="w3-xxxlarge w3-text-green"><b word-break: break-all;>Allgemeine Geschäftsbedingungen</b></h1>
     <hr style="width:50px;border:5px solid rgb(0, 255, 0)" class="w3-round">
     <p style="color:white;"> Geschäftsbedingungen hier 
         Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut 
