Add privacy notice

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 <style>
 body,h1,h2,h3,h4,h5 {font-family: "Poppins", sans-serif}
 body {font-size:16px;}
-body {background-color: rgb(18, 18, 18);}
 .w3-half img{margin-bottom:-6px;margin-top:16px;opacity:0.8;cursor:pointer}
 .w3-half img:hover{opacity:1}
 </style>
@@ -17,9 +16,10 @@ body {background-color: rgb(18, 18, 18);}
 <body>
 
 <!-- Sidebar/menu -->
-<nav class="w3-sidebar w3-black w3-collapse w3-top w3-large w3-padding" style="z-index:3;width:300px;font-weight:bold;" id="mySidebar"><br>
+<nav class="w3-sidebar w3-green w3-collapse w3-top w3-large w3-padding" style="z-index:3;width:300px;font-weight:bold;" id="mySidebar"><br>
   <a href="javascript:void(0)" onclick="w3_close()" class="w3-button w3-hide-large w3-display-topleft" style="width:100%;font-size:22px">Close Menu</a>
   <div class="w3-container">
+    <br>
     <img src="logo_green.png" style="width:100%" onclick="onClick(this)" alt="Simple Order Logo">
   </div>
   <br>
@@ -45,7 +45,7 @@ body {background-color: rgb(18, 18, 18);}
 
   <!-- Header -->
   <div class="w3-container" style="margin-top:80px" id="contact">
-    <h1 class="w3-jumbo" style="color:white;"><b>Simple Order</b></h1>
+    <h1 class="w3-jumbo"><b>Simple Order</b></h1>
     <h1 class="w3-xxxlarge w3-text-green"><b>Home</b></h1>
     <hr style="width:50px;border:5px solid rgb(0, 255, 0)" class="w3-round">
   </div>
@@ -53,12 +53,12 @@ body {background-color: rgb(18, 18, 18);}
   <!-- Photo grid (modal) -->
   <div class="w3-row-padding">
     <div class="w3-half">
-      <h1 style="color:white;">Wilkommen bei Simple Order</h1>
-      <p style="color:white;">Die App Simple Order bietet eine neue Art den Bestellprozess 
+      <h1>Wilkommen bei Simple Order</h1>
+      <p>Die App Simple Order bietet eine neue Art den Bestellprozess 
         eines Restaurants digital zu erleben. Bestellungen der Kund*innen 
         können einfach und schnell über die App aufgegeben und vom Restaurant verarbeitet werden.</p>
-      <p style="color:white;">Auch Vorbestellungen sind ohne Probleme möglich, welche das entsprechende Restaurant dann beim Besuch ausführt.</p>
-      <p style="color:white;">Die App trägt somit zur Entlastung des Personals und zu einer entspannteren Atmosphäre für die
+      <p>Auch Vorbestellungen sind ohne Probleme möglich, welche das entsprechende Restaurant dann beim Besuch ausführt.</p>
+      <p>Die App trägt somit zur Entlastung des Personals und zu einer entspannteren Atmosphäre für die
         Besucher*innen bei.</p>
     </div>
   </div>
