--- a/impressum.html
+++ b/impressum.html
@@ -9,7 +9,6 @@
 <style>
 body,h1,h2,h3,h4,h5 {font-family: "Poppins", sans-serif}
 body {font-size:16px;}
-body {background-color: rgb(18, 18, 18);}
 .w3-half img{margin-bottom:-6px;margin-top:16px;opacity:0.8;cursor:pointer}
 .w3-half img:hover{opacity:1}
 </style>
@@ -17,9 +16,10 @@ body {background-color: rgb(18, 18, 18);}
 <body>
 
 <!-- Sidebar/menu -->
-<nav class="w3-sidebar w3-black w3-collapse w3-top w3-large w3-padding" style="z-index:3;width:300px;font-weight:bold;" id="mySidebar"><br>
+<nav class="w3-sidebar w3-green w3-collapse w3-top w3-large w3-padding" style="z-index:3;width:300px;font-weight:bold;" id="mySidebar"><br>
   <a href="javascript:void(0)" onclick="w3_close()" class="w3-button w3-hide-large w3-display-topleft" style="width:100%;font-size:22px">Close Menu</a>
   <div class="w3-container">
+    <br>
     <img src="logo_green.png" style="width:100%" onclick="onClick(this)" alt="Simple Order Logo">
   </div>
   <br>
@@ -45,29 +45,29 @@ body {background-color: rgb(18, 18, 18);}
 
   <!-- Header -->
   <div class="w3-container" style="margin-top:80px" id="contact">
-    <h1 class="w3-jumbo"><b style="color:white;">Simple Order</b></h1>
-    <h1 class="w3-xxxlarge w3-text-green"><b word-break: break-all;>Impressum</b></h1>
+    <h1 class="w3-jumbo"><b>Simple Order</b></h1>
+    <h1 class="w3-xxxlarge w3-text-green"><b word-break:break-all;>Impressum</b></h1>
     <hr style="width:50px;border:5px solid rgb(0, 255, 0)" class="w3-round">
   </div>
   
   <!-- Photo grid (modal) -->
   <div class="w3-row-padding">
     <div class="w3-half">
-      <h1 style="color:white;">Angaben gemäß § 5 TMG</h1>
-      <p style="color:white;">Simple Order</p>
-      <p style="color:white;">Sanderring 2</p>
-      <p style="color:white;">97070 Würzburg</p>
+      <h1>Angaben gemäß § 5 TMG</h1>
+      <p>Simple Order GbR</p>
+      <p>Mainstraße 5</p>
+      <p>Schwarzach am Main, BY 97359</p>
+      <p>Germany</p>
       <br>
-      <b style="color:white;">Vertreten durch:</b>
-      <p style="color:white;">Cem Özdemir</p>
-      <p style="color:white;">Martin Klüpfel</p>
-      <p style="color:white;">Elmar Schult</p>
-      <p style="color:white;">Maurice Friederici</p>
-      <p style="color:white;">Lenny Siol</p>
-      <p style="color:white;">Paul Birner</p>
-      <h1 style="color:white;">Kontakt</h1>
-      <p style="color:white;">Telefon: </p>
-      <p style="color:white;">Email: </p>
+      <b>Vertreten durch:</b>
+      <p>Cem Özdemir</p>
+      <p>Martin Klüpfel</p>
+      <p>Elmar Schult</p>
+      <p>Maurice Friederici</p>
+      <p>Lenny Siol</p>
+      <p>Paul Birner</p>
+      <h1>Kontakt</h1>
+      <p>Email: paul.birner@web.de</p>
     </div>
   </div>
 
