--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -9,7 +9,6 @@
 <style>
 body,h1,h2,h3,h4,h5 {font-family: "Poppins", sans-serif}
 body {font-size:16px;}
-body {background-color: rgb(18, 18, 18);}
 .w3-half img{margin-bottom:-6px;margin-top:16px;opacity:0.8;cursor:pointer}
 .w3-half img:hover{opacity:1}
 </style>
@@ -17,9 +16,10 @@ body {background-color: rgb(18, 18, 18);}
 <body>
 
 <!-- Sidebar/menu -->
-<nav class="w3-sidebar w3-black w3-collapse w3-top w3-large w3-padding" style="z-index:3;width:300px;font-weight:bold;" id="mySidebar"><br>
+<nav class="w3-sidebar w3-green w3-collapse w3-top w3-large w3-padding" style="z-index:3;width:300px;font-weight:bold;" id="mySidebar"><br>
   <a href="javascript:void(0)" onclick="w3_close()" class="w3-button w3-hide-large w3-display-topleft" style="width:100%;font-size:22px">Close Menu</a>
   <div class="w3-container">
+    <br>
     <img src="logo_green.png" style="width:100%" onclick="onClick(this)" alt="Simple Order Logo">
   </div>
   <br>
@@ -45,10 +45,10 @@ body {background-color: rgb(18, 18, 18);}
 
   <!-- Header -->
   <div class="w3-container" style="margin-top:80px" id="contact">
-    <h1 class="w3-jumbo"><b style="color:white;">Simple Order</b></h1>
+    <h1 class="w3-jumbo"><b>Simple Order</b></h1>
     <h1 class="w3-xxxlarge w3-text-green"><b word-break: break-all;>Allgemeine Geschäftsbedingungen</b></h1>
     <hr style="width:50px;border:5px solid rgb(0, 255, 0)" class="w3-round">
-    <p style="color:white;"> Geschäftsbedingungen hier 
+    <p> Geschäftsbedingungen hier 
         Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut 
         labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores 
         et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem 
