--- a/impressum.html
+++ b/impressum.html
@@ -46,7 +46,7 @@ body {font-size:16px;}
   <!-- Header -->
   <div class="w3-container" style="margin-top:80px" id="contact">
     <h1 class="w3-jumbo"><b>Simple Order</b></h1>
-    <h1 class="w3-xxxlarge w3-text-green"><b word-break:break-all;>Impressum</b></h1>
+    <h1 class="w3-xxxlarge w3-text-green"  style="word-break: break-all;"><b word-break:break-all;>Impressum</b></h1>
     <hr style="width:50px;border:5px solid rgb(0, 255, 0)" class="w3-round">
   </div>
   
