Start adding download buttons to homepage

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@ body,h1,h2,h3,h4,h5 {font-family: "Poppins", sans-serif}
 body {font-size:16px;}
 .w3-half img{margin-bottom:-6px;margin-top:16px;opacity:0.8;cursor:pointer}
 .w3-half img:hover{opacity:1}
+.container{
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start
+    }
 </style>
 </head>
 <body>
@@ -60,6 +65,32 @@ body {font-size:16px;}
       <p>Auch Vorbestellungen sind ohne Probleme möglich, welche das entsprechende Restaurant dann beim Besuch ausführt.</p>
       <p>Die App trägt somit zur Entlastung des Personals und zu einer entspannteren Atmosphäre für die
         Besucher*innen bei.</p>
+    </div>
+  </div>
+
+  <div class="w3-row-padding w3-center">
+    <div class="w3-half">
+    <div class="container">
+      <div>
+      <a href="https://youtu.be/dQw4w9WgXcQ" title="DownloadAppStore">
+          <img src="logo_green.png" style="width:25%" onclick="onClick(this)" alt="App Store Logo">
+      </a>
+      <p>Download App Store</p>
+      </div>
+      <div>
+      <a href="https://youtu.be/dQw4w9WgXcQ" title="DownloadPlayStore">
+          <img src="logo_green.png" style="width:25%" onclick="onClick(this)" alt="Play Store Logo">
+      </a>
+      <p>Download Play Store</p>
+    </div>
+    </div>
+    </div>
+  </div>
+
+  <div class="w3-row-padding">
+    <div class="w3-half">
+      <p>Sie sind Restaurantbetreiber*in und interessiert daran mit uns zu arbeiten?</p>
+      <p>Kontaktieren Sie uns gerne per Email: paul.birner@web.de</p>
     </div>
   </div>
 
