--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ body {font-size:16px;}
   <a href="javascript:void(0)" onclick="w3_close()" class="w3-button w3-hide-large w3-display-topleft" style="width:100%;font-size:22px">Close Menu</a>
   <div class="w3-container">
     <br>
-    <img src="logo_green.png" style="width:100%" onclick="onClick(this)" alt="Simple Order Logo">
+    <img src="resources/logo.png" style="width:100%" onclick="onClick(this)" alt="Simple Order Logo">
   </div>
   <br>
   <div class="w3-bar-block">
@@ -70,19 +70,15 @@ body {font-size:16px;}
 
   <div class="w3-row-padding w3-center">
     <div class="w3-half">
-    <div class="container">
-      <div>
-      <a href="https://youtu.be/dQw4w9WgXcQ" title="DownloadAppStore">
-          <img src="logo_green.png" style="width:25%" onclick="onClick(this)" alt="App Store Logo">
-      </a>
-      <p>Download App Store</p>
-      </div>
       <div>
       <a href="https://youtu.be/dQw4w9WgXcQ" title="DownloadPlayStore">
-          <img src="logo_green.png" style="width:25%" onclick="onClick(this)" alt="Play Store Logo">
+        <img src="resources/google-play-badge.png" style="width:25%" onclick="onClick(this)" alt="Play Store Logo">
       </a>
-      <p>Download Play Store</p>
-    </div>
+      </div>
+      <div>
+      <a href="https://youtu.be/dQw4w9WgXcQ" title="DownloadAppStore">
+        <img src="resources/app-store-badge.svg" style="width:21%" onclick="onClick(this)" alt="App Store Logo">
+      </a>
     </div>
     </div>
   </div>
