--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -20,7 +20,7 @@ body {font-size:16px;}
   <a href="javascript:void(0)" onclick="w3_close()" class="w3-button w3-hide-large w3-display-topleft" style="width:100%;font-size:22px">Close Menu</a>
   <div class="w3-container">
     <br>
-    <img src="logo_green.png" style="width:100%" onclick="onClick(this)" alt="Simple Order Logo">
+    <img src="resources/logo.png" style="width:100%" onclick="onClick(this)" alt="Simple Order Logo">
   </div>
   <br>
   <div class="w3-bar-block">
