--- a/impressum.html
+++ b/impressum.html
@@ -54,7 +54,7 @@ body {font-size:16px;}
   <div class="w3-row-padding">
     <div class="w3-half">
       <h1>Angaben gemäß § 5 TMG</h1>
-      <p>Simple Order GbR</p>
+      <p>Fair Enough Solutions</p>
       <p>Mainstraße 5</p>
       <p>Schwarzach am Main, BY 97359</p>
       <p>Germany</p>
@@ -67,7 +67,7 @@ body {font-size:16px;}
       <p>Lenny Siol</p>
       <p>Paul Birner</p>
       <h1>Kontakt</h1>
-      <p>Email: paul.birner@web.de</p>
+      <p>Email:</p>
     </div>
   </div>
 
