--- a/impressum.html
+++ b/impressum.html
@@ -65,7 +65,7 @@ body {font-size:16px;}
       <p>Maurice Friederici</p>
       <p>Paul Birner</p>
       <h1>Kontakt</h1>
-      <p>Email:</p>
+      <p>Email: cem@cmpact.de</p>
     </div>
   </div>
 
