--- a/privacy.html
+++ b/privacy.html
@@ -47,9 +47,12 @@ body {font-size:16px;}
   <div class="w3-container" style="margin-top:80px" id="contact">
     <h1 class="w3-jumbo"><b>Simple Order</b></h1>
     <h1 class="w3-xxxlarge w3-text-green" style="word-break: break-all;"><b>Datenschutzerklärung</b></h1>
-    <hr style="width:50px;border:5px solid rgb(0, 255, 0)" class="w3-round">
-    
-</div>
+    <hr style="width:50px;border:5px solid rgb(0, 255, 0)" class="w3-round"> 
+  </div>
+
+  <div class="w3-row-padding">
+    <a href="resources/privacy-statement.pdf">Hier Downloaden</a>
+  </div>
 </div>
 <!-- W3.CSS Container -->
 <div class="w3-black w3-container w3-padding-32" style="margin-top:75px;padding-right:58px;"><p class="w3-right">Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-opacity">w3.css</a></p></div>
